--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -66,7 +66,7 @@
           <div class="order-summary">
             <div class="summary-row">
               <span>Subtotal</span>
-              <span><%= typeof order.totalPrice === 'number' ? order.totalPrice.toFixed(2) : '0.00' %></span>
+              <span><%= typeof order.totalPrice === 'number' ? (order.totalPrice + order.discount).toFixed(2) : '0.00' %></span>
             </div>
             <div class="summary-row">
               <span>Shipping</span>
