--- a/views/admin/coupons.ejs
+++ b/views/admin/coupons.ejs
@@ -71,11 +71,11 @@
                                     <td><%= coupon.couponName %></td>
                                     <td><%= coupon.couponCode %></td>
                                     <td><%= coupon.discountType.charAt(0).toUpperCase() + coupon.discountType.slice(1) %></td>
-                                    <td><%= coupon.discountType === 'percentage' ? coupon.discount + '%' : '$' + coupon.discount %></td>
-                                    <td>$<%= coupon.minOrder %></td>
+                                    <td><%= coupon.discountType === 'percentage' ? coupon.discount + '%' : '₹' + coupon.discount %></td>
+                                    <td>₹<%= coupon.minOrder %></td>
                                     <td><%= new Date(coupon.validFrom).toLocaleDateString() %></td>
                                     <td><%= new Date(coupon.validUpto).toLocaleDateString() %></td>
-                                    <td><%= coupon.couponLimit || 'N/A' %></td>
+                                    <td><%= coupon.couponLimit || '0' %></td>
                                     <td><%= coupon.isList ? 'Active' : 'Inactive' %></td>
                                     <td>
                                         <a href="#" class="action-icon editCouponButton" data-coupon-id="<%= coupon.id %>" aria-label="Edit coupon"><i class="fas fa-edit"></i></a>
