--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -269,7 +269,7 @@
         <!-- Main Content -->
         <div class="content">
             <!-- Sidebar Navigation -->
-            <%- include('../partials/users/sideBar', {currentPage : 'My Orders'}) %>
+            <%- include('../partials/users/sideBar', {currentPage : 'My Address'}) %>
 
             <!-- Address List -->
             <div class="profile-form">
