--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -25,15 +25,8 @@
         <!-- Main Content -->
         <div class="content">
             <!-- Sidebar Navigation -->
-            <!-- <div class="sidebar">
-                <h3>My Details</h3>
-                <ul>
-                    <li class="active"><a href="/profile">My Profile</a></li>
-                    <li><a href="/address">My Address</a></li>
-                </ul>
-            </div> -->
 
-            <%- include('../partials/users/sideBar', {currentPage : 'My Orders'}) %>
+            <%- include('../partials/users/sideBar', {currentPage : 'My Profile'}) %>
 
             <!-- Profile Form -->
             <div id="profile-section" class="profile-form">
