--- a/public/stylesheet/user/wishList.css
+++ b/public/stylesheet/user/wishList.css
@@ -169,7 +169,7 @@ a {
 .container {
     /* max-width: 1200px; */
     /* margin: 10; */
-    padding: 20px;
+    padding: 0 30px 20px;
 }
 
 /* Breadcrumb Navigation */
@@ -203,14 +203,14 @@ a {
 }
 
 /* Sidebar */
-.sidebar {
+/* .sidebar {
     width: 200px;
     flex-shrink: 0;
     border: 1px solid var(--border-color);
     border-radius: 10px;
     padding: 20px;
     box-shadow: var(--shadow);
-    /* height: fit-content; */
+    height: fit-content;
     min-height: 600px;
 }
 
@@ -241,7 +241,7 @@ a {
 .sidebar ul li.active a,
 .sidebar ul li a:hover {
     color: var(--text-color);
-}
+} */
 
 /* Profile Form */
 .profile-form {
